--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_fonts: ^2.3.1
   flutter_lints: ^1.0.4
   cached_network_image: ^3.2.0
+  faker: ^2.0.0
+  jiffy: ^5.0.0
 
 flutter_native_splash:
   color: "#FFA500"
