--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,11 @@ dependencies:
   cached_network_image: ^3.2.0
   faker: ^2.0.0
   jiffy: ^5.0.0
+  stream_chat_flutter_core: ^3.5.1
+  logger: ^1.1.0
 
 flutter_native_splash:
-#  color: "#FFA500"
-  # image: "assets/images/happy.png"
+  color: "#FFA500"
   background_image: "assets/images/splash_back.png"
   android: true
   ios: true
