--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.3
   flutter_native_splash: ^2.0.5
-  firebase_core: "^1.13.1"
+  firebase_core: ^1.13.1
   firebase_auth: ^3.3.9
+  cloud_functions: ^3.2.10
   google_fonts: ^2.3.1
   flutter_lints: ^1.0.4
   cached_network_image: ^3.2.0
@@ -47,7 +48,7 @@ dependencies:
   logger: ^1.1.0
 
 flutter_native_splash:
-  color: "#FFA500"
+#  color: "#FFA500"
   background_image: "assets/images/splash_back.png"
   android: true
   ios: true
